<resources>
    <string name="app_name">Question 1</string>

    <string name="name">Enter your name</string>
    <string name="palindrome">Enter text to check palindrome</string>
    <string name="photo">Photo\n</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_screen">Second Screen</string>
    <string name="back">ic_back\n</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="avatar">avatar</string>
    <string name="no_users_available">User Not Found 404\n</string>
    <string name="no_data">X</string>
</resources>