<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.SecondFragment">

    <LinearLayout
        android:id="@+id/ll_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/second_screen"
            android:textSize="20sp"
            android:textColor="#04021D"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_"
        android:layout_below="@id/ll_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="#04021D"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/john_doe"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#04021D"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_user_name"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="#04021D"
            android:visibility="gone"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_user_name"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="#04021D"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="25dp"
        android:layout_marginHorizontal="25dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_white"
        android:backgroundTint="#2B637B"
        android:layout_marginBottom="30dp"
        android:text="@string/choose_a_user"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        />


</RelativeLayout>