<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.ThirdFragment">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/ll_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/third_screen"
            android:textSize="20sp"
            android:textColor="#04021D"
            android:gravity="center"/>
    </LinearLayout>

    <!-- Swipe Refresh Layout untuk Pull to Refresh -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_header_container">

        <!-- RecyclerView untuk Menampilkan List User -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!-- Empty State jika Data Kosong -->
    <LinearLayout
        android:id="@+id/empty_state_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_first_sc"
            android:contentDescription="@string/no_data"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_users_available"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</RelativeLayout>
