<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.FirstFragment"
    android:background="@drawable/bg_firstSc"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_gravity="center"
            android:contentDescription="@string/photo"
            android:src="@drawable/ic_firstSc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="60dp"
            >

            <EditText
                android:id="@+id/field_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="@string/name"
                android:inputType="text"
                android:paddingHorizontal="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:background="@drawable/shape_white"
                android:hint="@string/name"
                android:textColor="#04021D"
                android:textColorHint="#59686777"
                android:layout_marginBottom="15dp"
                />

            <EditText
                android:id="@+id/field_palindrome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="@string/palindrome"
                android:inputType="text"
                android:paddingHorizontal="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:background="@drawable/shape_white"
                android:hint="@string/palindrome"
                android:textColor="#04021D"
                android:textColorHint="#59686777"
                android:layout_marginBottom="15dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="50dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_check"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="25dp"
                android:background="@drawable/shape_white"
                android:backgroundTint="#2B637B"
                android:layout_marginBottom="15dp"
                android:text="@string/check"
                android:textColor="@color/white"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="25dp"
                android:background="@drawable/shape_white"
                android:backgroundTint="#2B637B"
                android:text="@string/next"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>